# paftacular

./: HISTORY.md  README.md  justfile  pyproject.toml  tmp.py
.github/workflows/: draft-pdf.yml  python-package.yml
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
src/paftacular/: __init__.py  annotation.py  comps.py  constants.py  parser.py  util.py
src/paftacular/comps/: __init__.py  base.py  ions.py  modifiers.py  util.py
tests/: test_annot.py  test_basic.py  test_caching.py  test_comps_parse.py  test_helper.py  test_isotope.py  test_make_methods.py  test_parser_types.py  test_util.py
