[project]
name = "paftacular"
dynamic = ["version"]
description = "mzpaf parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tacular>=1.0.0"]
authors = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
maintainers = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
[project.optional-dependencies]
smiles = ["pysmiles>=2.0.1"]
sequence = ["peptacular>=2.5.0"]
all = ["pysmiles>=2.0.1", "peptacular>=2.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paftacular"]

[tool.uv]
package = true
dev-dependencies = [
    "pysmiles>=2.0.1",
    "peptacular>=2.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "pytest-cov>=6.0.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]

[tool.ruff]
target-version = "py312"
line-length = 160

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E741",  # Abigous variable names)
]

[tool.hatch.version]
path = "src/paftacular/__init__.py"


#[tool.uv.sources]
#tacular = { path = "../tacular", editable = true }
#peptacular = { path = "../peptacular", editable = true }
